Bug 322149 - color management is ignoring monitor profile
Summary: color management is ignoring monitor profile
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-09 11:46 UTC by John Lakkas
Modified: 2015-06-02 15:00 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Lakkas 2013-07-09 11:46:54 UTC
It seems that the current color management configuration of Gwenview is rendering an image with an embedded profile into sRGB and then displays the image.

There is no option to set a monitor profile and render the embedded profile or sRGB profile into the chosen monitor profile. While this is ok if a display has a native profile identical to sRGB this is usually not the case. Blackpoint compensation is also very useful when converting to monitor profile.

Geeqie has a nice implementation of the color management process as do GIMP, Krita.

Reproducible: Always

Steps to Reproduce:
1. Calibrate Monitor and aquire a .icc/.icm file from the calibration
2. Setup any of GIMP, Krita or Geeqie to use the above monitor profile
3. Visually compare the image in any of the above and Gwenview
Actual Results:  
Usually the image looks darker and the color hues look somewhat not natural and not as vibrant.

Expected Results:  
The input image is rendered to screen after the conversion of the color coordinates from the input profile to the monitor profile.
Comment 1 Kai-Uwe Behrmann 2014-05-26 19:38:15 UTC
Confirming, the monitor profile is not used.
Comment 2 Jan Kundrát 2015-05-28 21:15:46 UTC
The monitor profile is not getting used if the image doesn't have an embedded ICC profile. https://git.reviewboard.kde.org/r/123928/ changes it to treat these images as sRGB, and to apply the correct display profile.
Comment 3 Jan Kundrát 2015-06-02 15:00:03 UTC
Git commit 1425825120ad19fc085fe62ca025023d46038aef by Jan Kundrát.
Committed on 29/05/2015 at 00:32.
Pushed by jkt into branch 'master'.

Apply display color profile to all images

...including those which do not have any embedded profile. Just treat
them as sRGB, which is probably a reasonable choice. This makes a huge
difference on wide-gamut displays.

LittleCMS doesn't support RGBA_Premultiplied because premultipled alpha
doesn't "make a lot of sense with a color management system since color
perception varies with intensity and the colorspace may not be linear
across the color channels" (see [1] for why, and for an experimental
patch which apparently didn't move anywhere and wasn't merged).

[1] http://sourceforge.net/p/lcms/mailman/message/30246542/

REVIEW: 123928
Related: bug 341943

M  +6    -1    lib/cms/cmsprofile.cpp
M  +1    -0    lib/cms/cmsprofile.h
M  +4    -2    lib/documentview/rasterimageview.cpp
M  +0    -2    lib/imagescaler.cpp

http://commits.kde.org/gwenview/1425825120ad19fc085fe62ca025023d46038aef